--- a/src/controller/.project
+++ b/src/controller/.project
@@ -3,6 +3,7 @@
 	<name>Quadcopter control application</name>
 	<comment></comment>
 	<projects>
+		<project>BlackLib</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
